# pag-cmp

./: .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  README.md  README_CN.md  gradle.properties  settings.gradle.kts
androidApp/: build.gradle.kts
androidApp/src/main/kotlin/io/github/limuyang2/myapplication/: MainActivity.kt
androidApp/src/main/res/values/: strings.xml
desktopApp/: build.gradle.kts
desktopApp/src/main/kotlin/io/github/limuyang2/myapplication/: main.kt
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
lib-pag-cmp/: build.gradle.kts
lib-pag-cmp/src/jvmMain/cpp/: CMakeLists.txt  pag_cmp_jvm.cpp
lib-pag-cmp/src/jvmMain/resources/native/macos-arm64/: libpag_cmp_jvm.dylib
shared/: build.gradle.kts
shared/src/androidHostTest/kotlin/io/github/limuyang2/myapplication/: SharedLogicAndroidHostTest.kt
shared/src/androidMain/kotlin/io/github/limuyang2/myapplication/: DemoAssets.kt  Platform.android.kt
shared/src/commonMain/kotlin/io/github/limuyang2/myapplication/: App.kt  DemoAssets.kt  Greeting.kt  GreetingUtil.kt  Platform.kt
shared/src/commonTest/kotlin/io/github/limuyang2/myapplication/: SharedCommonTest.kt
shared/src/iosMain/kotlin/io/github/limuyang2/myapplication/: DemoAssets.kt  MainViewController.kt  Platform.ios.kt
shared/src/iosTest/kotlin/io/github/limuyang2/myapplication/: SharedLogicIOSTest.kt
webApp/src/webMain/resources/: index.html  loading_bmp.pag
webApp/src/webMain/resources/pag/: libpag-bootstrap.js  libpag.esm.js  libpag.wasm
(+24 files in other folders)
